MCR-3643 Update to Java 25 and modernize code